k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-service
spec:
  selector:
    app: k8s-service
  ports:
    - protocol: TCP
      port: 4201
      targetPort: 9010
