k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /service
            pathType: Prefix
            backend:
              service:
                name: k8s-service
                port:
                  number: 80
          - path: /web
            pathType: Prefix
            backend:
              service:
                name: k8s-web
                port:
                  number: 80
